Add more documentation, cleanup

--- a/all_containers/server-fdp/Dockerfile
+++ b/all_containers/server-fdp/Dockerfile
@@ -7,4 +7,8 @@ RUN ls
 RUN python3 -m pip install --upgrade pip
 RUN pip3 install --no-cache-dir -r requirements_fdp.txt
 
+RUN useradd -ms /bin/bash fdpuser
+USER fdpuser
+#WORKDIR /home/fdpuser
+
 CMD ["python3", "fdp.py"]
