--- a/all_containers/common_files/requirements_jupyter.txt
+++ b/all_containers/common_files/requirements_jupyter.txt
@@ -1,10 +1,12 @@
 jupyter==1.0.0
 jupyter-contrib-nbextensions==0.5.1
 jupyter-nbextensions-configurator==0.4.1
+kaleido==0.2.1
 matplotlib==3.1.2
 numpy==1.16.4
 pandas==0.24.2
 plotly==4.12.0
+psutil==5.8.0
 rdflib==4.2.2
 requests==2.22.0
 scipy==1.5.3
